<resources>
    <string name="app_name">Green Thumb</string>
    <string name="tasks">Tasks</string>
    <string name="non_verified_toast">Please verify your email before logging in.</string>
    <string name="verification_sent">Registered Successfully. Check email for verification link.</string>
    <string name="checkbox_text">Recurring</string>
    <string name="interval_hint">Interval (days)</string>
    <string name="trade_accepted">Trade Accepted</string>
    <string name="trade_declined">Trade Declined</string>

    <!-- Task titles -->
    <string-array name="task_titles">
        <item>Select task</item>
        <item>Install and maintain seasonal plants</item>
        <item>Mow, trim and fertilize green spaces</item>
        <item>Mulch, edge and weed gardens</item>
        <item>Prune and trim trees and bushes</item>
        <item>Maintain all gardening equipment and machinery</item>
        <item>Monitor and maintain the health of plants</item>
        <item>Deal with pest problems that could damage plants</item>
        <item>Keep gardens and green spaces clear of debris and litter</item>
    </string-array>

    <string-array name="task_assignees">
        <item>Select assignee</item>
    </string-array>

    <string name="title_activity_view_tasks">ViewTasks</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="title_activity_trade_tasks">TradeTasks</string>
    <string name="set_due_date_button">Set Due Date</string>

    <!-- Navigation Bar Labels-->
    <string name="menu_home">Home</string>
    <string name="menu_view">View Tasks</string>
    <string name="menu_trade">Trade Tasks</string>

    <string name="edit">Edit</string>
    <string name="claim">Claim</string>
    <string name="mark_as_done">Mark As Done</string>
    <string name="delete">Delete</string>
    <string name="trade">Trade</string>

    <string name="add_task">Add Task</string>
    <string name="edit_task">Edit Task</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>

    <string name="myTasks">My Tasks</string>
    <string name="title">Title</string>
    <string name="due_date">Due Date</string>
    <string name="assignee">Assignee</string>
    <string name="done">Done</string>
    <string name="overdue">Overdue</string>

    <string name="myTradeRequests">My Trade Requests</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>

    <!-- TaskHolder strings -->
    <string name="due">Due date:</string>
    <string name="none">None</string>
    <string name="assigned">Assigned to:</string>
    <string name="no_one">No one</string>

    <!-- TradeRequestHolder strings -->
    <string name="requested_by">Requested by:</string>

    <!-- login/sign up strings -->
    <string name="login">login</string>
    <string name="logout">Logout</string>
    <string name="sign_up">sign up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="reset_email">Reset Email</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="create_an_account">Create an account</string>
    <string name="already_have_an_account_prompt">Already have an account? Login</string>
</resources>
