...
        <import type="com.example.greenthumb.tasks.TaskTitle"/>
    </data>
    <RelativeLayout
        android:id="@+id/layout_add_task"
        android:layout_width="match_parent" android:layout_height="match_parent" android:padding="24dp" >
        <Spinner
            android:id="@+id/spinnerTaskTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/task_titles"
            android:paddingBottom="30dp"/>

        <Spinner
...
